--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Seaweed Farming</title>
-	<link rel="stylesheet" type="text/css" href=css/styles.css">
+	<link rel="stylesheet" type="text/css" href=css/styles.css>
 </head>
 <body>
 <h1> Learn about Seaweed Farming</h1>
