--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -5,15 +5,14 @@
 	<link rel="stylesheet" type="text/css" href=css/styles.css>
 </head>
 <body>
-	<div class="wrapper">
-	<header>
-		<p>Seaweed Farming</p>
-	</header>
+	<!-- //<header> -->
+		<!-- <h1 id="logo">Seaweed Farming</h1> -->
+	<!-- </header> -->
 	<nav>
-		<p>Benefits</p>
-		<p>Uses</p>
-		<p>Get Started Guide</p>
+		<a href="google.com">Benefits</a>
+		<a href="google.com">Uses</a>
 	</nav>
+	</header>
 <section id="hero-module">
 <p id="slogan"> Join the ocean farming revolution!</p>
 <p id="main-cta"><a href="http://www.google.com">Get started</a></p>
