--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -49,9 +49,9 @@
 <p><a href="mailto:fakeemail@gmail.com">Contact me!</a></p>
 </section>
 <footer>
-	<p> Contact Us </p>
-	<p> About </p>
-	<p> Recources </p>
+	<a href="google.com">Contact Us </a>
+	<a href="google.com">About </a>
+	<a href="google.com">Recources </a>
 </footer>
 </div>
 </body>
