--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -5,54 +5,46 @@
 	<link rel="stylesheet" type="text/css" href=css/styles.css>
 </head>
 <body>
-	<div id="wrapper">	
-	<header>
-	<nav>
+	<header class="clearfix">
 		<h1>Seaweed <br>Farming</h1>
+	<nav>
 		<a href="google.com">Benefits</a>
 		<a href="google.com">Uses</a>
 		<a href="google.com">Resources</a>
 	</nav>
 	</header>
 
-<main>
 	<section id="hero-module">
-
-		<div id="main-image">
-		<img src="images/seaweed.png" alt="seaweed" title="picture of seaweed" height="75%" width="75%">
-		</div>
+		<img src="images/Seaweed.png" alt="seaweed" title="picture of seaweed" id="main-image">
 
 	<div id="hero-right">
-		<h2> Join the <br>ocean farming revolution!</h2>
-		<p id="cta"><a href="http://www.google.com">Get started</a></p>
+		<h2> Join the ocean farming revolution!</h2>
+		<h3>Learn how to get started building your own seaweed farm today.</h3>
+		<a href="http://www.google.com" class="cta">Get started</a>
 	</div>
-		
 	</section>
-</main>
 
-<div id="content-module">
-	<div id="column-one">
-		<a href="google.com">Benefits</a>
-	</div>
-
-	<div id="column-two">
-		<a href="google.com">Uses</a>
-	</div>
-
-	<div id="column-three">
-		<a href="google.com">Resources</a>
-	</div>
-
-	</div>
+<section id="content-module" class="clearfix">
+		<a href="google.com" class="button">Benefits</a>
+		<a href="google.com" class="button">Uses</a>
+		<a href="google.com" class="button">Resources</a>
+		<a href="google.com" class="button">How-To</a>
+	</section>
 
 	<section id="subscribe">
-<p><a href="mailto:fakeemail@gmail.com">Contact me!</a></p>
+	<p class="sub">Submit your email below to be notified when how-to guide is published:</p>	
+	<form action="https://formspree.io/xwkrpqql" method="POST">
+  <input type="text" name="email">
+  <input type="submit" value="Submit">
+</form>
 </section>
+
 <footer>
-	<a href="google.com">Contact Us </a>
-	<a href="google.com">About </a>
-	<a href="google.com">Recources </a>
+	<nav>
+		<a href="google.com" class="footernav">Contact Us</a>
+		<a href="google.com" class="footernav">About</a>
+		<a href="google.com" class="footernav">Recources</a>
+	</nav>
 </footer>
-</div>
 </body>
 </html>
