--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<header class="clearfix">
-		<h1>Seaweed <br>Farming</h1>
+		<h1>Seaweed <br>Farmer</h1>
 	<nav>
 		<a href="google.com">Benefits</a>
 		<a href="google.com">Uses</a>
@@ -19,7 +19,7 @@
 
 	<div id="hero-right">
 		<h2> Join the ocean farming revolution!</h2>
-		<h3>Learn how to get started building your own seaweed farm today.</h3>
+		<h3>Learn how to get started building your own restorative seaweed farm today.</h3>
 		<a href="http://www.google.com" class="cta">Get started</a>
 	</div>
 	</section>
